vmware: add image.yaml toggle for secure boot
Add toggle for secure boot in the OVA. This is a cherry-pick of two
commits that added the toggle for secure boot.

ref: https://bugzilla.redhat.com/show_bug.cgi?id=2106055
(cherry picked from commit 37df48675f350539bff4bd8205f89e5ec5dc5e78)
(cherry picked from commit 27fa455d3c1925e478171ef38e3d618f015ef453)

--- a/src/image-default.yaml
+++ b/src/image-default.yaml
@@ -22,3 +22,4 @@ squashfs-compression: zstd
 # Defaults for VMware OVA, matching historical behavior
 vmware-hw-version: 13
 vmware-os-type: rhel7_64Guest
+vmware-secure-boot: true
