Drop golangci-lint from image build
Installing it is flaky and regularly breaks Prow and/or CoreOS CI. I
think the main issue for Prow is that the install script uses the GitHub
API anonymously and we get rate limited.

Looking at the official docs, they recommend using the GitHub Action
instead so let's do that in a follow-up (and have it run over the whole
repo instead of just the gangplank code).

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -8,8 +8,6 @@ export GOPATH=$(shell readlink -f .)
 GOARCH := $(shell go env GOARCH)
 build:
 	mkdir -p bin
-	test -e bin/golangci-lint || \
-		curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(GOPATH)/bin
 	test -f bin/schematyper || \
 		go install github.com/idubinskiy/schematyper@latest
 	test -e bin/gomarkdoc || \
@@ -24,5 +22,5 @@ clean:
 	rm -rfv bin
 	rm -rfv pkg
 
-install: bin/golangci-lint bin/gomarkdoc bin/minio bin/schematyper
-	install -v -D -t $(DESTDIR)$(PREFIX)/bin bin/{golangci-lint,gomarkdoc,minio,schematyper}
+install: bin/gomarkdoc bin/minio bin/schematyper
+	install -v -D -t $(DESTDIR)$(PREFIX)/bin bin/{gomarkdoc,minio,schematyper}
