image: Default to chunked-v1
Let's merge this in...say a month or so?  rpm-ostree v2022.12
should have propagated far enough by then.

--- a/src/image-default.yaml
+++ b/src/image-default.yaml
@@ -9,7 +9,7 @@ rootfs-args: ""
 extra-kargs: []
 
 # Can also be oci-chunked
-ostree-format: oci
+ostree-format: oci-chunked-v1
 # True if we should use `ostree container image deploy`
 deploy-via-container: false
 
