Add `hack/Dockerfile`, drop `COREOS_ASSEMBLER_GIT`
With the move to using even more Go, the workflow of just bind
mounting the source code will break more and more.

(It has never worked for anything in mantle/)

Let's document a more robust workflow that ensures that the Go
code is recompiled.

--- a/mantle/build
+++ b/mantle/build
@@ -26,7 +26,7 @@ ldflags="-X ${REPO_PATH}/version.Version=${version}"
 host_build() {
     local cmd=$1; shift
     echo "Building $cmd"
-    go build \
+    go build ${GOFLAGS:-} \
         -ldflags "${ldflags}" \
         -mod vendor \
         -o "bin/$cmd" \
@@ -41,7 +41,7 @@ cross_static_build() {
         mkdir -p "bin/$a"
         echo "Building $a/$cmd (static)"
         CGO_ENABLED=0 GOARCH=${BASEARCH_TO_GOARCH[$a]} \
-        go build \
+        go build ${GOFLAGS:-} \
             -ldflags "${ldflags} -extldflags=-static" \
             -mod vendor \
             -o "bin/$a/$cmd" \
