--- a/tools/Makefile
+++ b/tools/Makefile
@@ -10,13 +10,11 @@ build:
 	mkdir -p bin
 	test -f bin/schematyper || \
 		go install github.com/idubinskiy/schematyper@latest
-	test -e bin/gomarkdoc || \
-		go install github.com/princjef/gomarkdoc/cmd/gomarkdoc@latest
 	rm -rf pkg
 
 clean:
 	rm -rfv bin
 	rm -rfv pkg
 
-install: bin/gomarkdoc bin/schematyper
-	install -v -D -t $(DESTDIR)$(PREFIX)/bin bin/{gomarkdoc,schematyper}
+install: bin/schematyper
+	install -v -D -t $(DESTDIR)$(PREFIX)/bin bin/schematyper
