Remove `tools/`, install schematyper on demand
We've had a few build/CI flakes due to the `go install` invocations
happening as part of a build.  We previously removed `gomarkdoc`,
this completes things and stops building/installing `schematyper`
by default.

It's only need for developers to regenerate the schema; we commit
the generated code, so we don't need to build or ship it by default.

--- a/gangplank/Makefile
+++ b/gangplank/Makefile
@@ -4,7 +4,7 @@ version = $(shell cd .. && git log -n 1 --date=short --pretty=format:%cs.%h~${st
 cosa_dir = $(shell test -d /usr/lib/coreos-assembler && echo /usr/lib/coreos-assembler)
 ldflags=-X main.version=${version} -X main.cosaDir=${cosa_dir}
 buildtags=containers_image_openpgp
-export PATH := $(my_dir)/bin:$(shell readlink -f ../tools/bin):$(PATH)
+export PATH := $(my_dir)/bin:$(PATH)
 
 PREFIX ?= /usr
 DESTDIR ?=
