build: Add image.yaml option to inject OpenShift CVO annotations
We had these in the legacy oscontainer for RHCOS, and OKD today
hacks them in via a Dockerfile:
https://github.com/openshift/okd-machine-os/blob/0e9fbabbd3363bfc46d9d657bc173666e83e5d18/Dockerfile#L34

We need to carry support for this forward into the new format image,
as it's what is used to display the OS version as part of the release
image.

--- a/src/image-default.yaml
+++ b/src/image-default.yaml
@@ -10,6 +10,8 @@ extra-kargs: []
 
 # Can also be oci-chunked
 ostree-format: oci-chunked-v1
+# Inject io.openshift.build.version-display-names for OpenShift CVO
+ostree-container-inject-openshift-cvo-labels: false
 # True if we should use `ostree container image deploy`
 deploy-via-container: false
 
