Add support for composefs
This pairs with https://github.com/ostreedev/ostree/pull/2640

It's all off by default (to state the obvious).  But one can do e.g.:

```
$ cat >> src/config/image.yaml << EOF
composefs: true
EOF
```

To test out the fsverity bits, you also want
`rootfs: ext4verity`

More in https://github.com/ostreedev/ostree/issues/2867

--- a/src/image-default.yaml
+++ b/src/image-default.yaml
@@ -4,6 +4,8 @@ bootfs: "ext4"
 rootfs: "xfs"
 # Add arguments here that will be passed to e.g. mkfs.xfs
 rootfs-args: ""
+# Set to "true" to enable composefs
+composefs: false
 
 # Additional default kernel arguments injected into disk images
 extra-kargs: []
