mantle/aws: add configuration support for boot mode
Add configuration for boot mode when used with a supported architecture
i.e. 'amd64/x86_64'. With a default of 'uefi-preferred'.

--- a/src/image-default.yaml
+++ b/src/image-default.yaml
@@ -31,3 +31,4 @@ vmware-secure-boot: true
 # Defaults for AWS
 aws-imds-support: "v2.0"
 aws-volume-type: "gp3"
+aws-boot-mode-x86-64: "uefi-preferred"
