mantle/aws: add configuration support for VolumeType and IMDSv2 support
IMDSV2-only has the potential to break existing systems, expose configuration
through an environment vairable defined in 'image-default.yaml' to overide
defaults.

Default volume type to 'gp3', while 'gp3' is generally better there could be
a reason to change it. Expose configuration through enviornment variable
defined in 'image-default.yaml' to allow for overiding.

Docs:
IMDSv2: https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/configuring-IMDS-new-instances.html#configure-IMDS-new-instances-ami-configuration
GP3: https://docs.aws.amazon.com/emr/latest/ManagementGuide/emr-plan-storage-compare-volume-types.html

--- a/src/image-default.yaml
+++ b/src/image-default.yaml
@@ -27,3 +27,7 @@ squashfs-compression: zstd
 vmware-hw-version: 13
 vmware-os-type: rhel7_64Guest
 vmware-secure-boot: true
+
+# Defaults for AWS
+aws-imdsv2-only: true
+aws-volume-type: "gp3"
