create_disk: Add `bootupd-epoch`, hard require new bootupd
This hard requires

- https://github.com/coreos/bootupd/pull/543
- https://github.com/coreos/ignition/pull/1728

--- a/src/image-default.yaml
+++ b/src/image-default.yaml
@@ -7,6 +7,9 @@ rootfs-args: ""
 # Set to "true" to enable composefs
 composefs: false
 
+# - "1": adds a hard requirement of bootupd 0.2.X and updated ignition
+bootupd-epoch: "1"
+
 # Additional default kernel arguments injected into disk images
 extra-kargs: []
 
