osbuild: add aleph file stage
This is a set of patches from a currently a WIP PR from upstream
in https://github.com/osbuild/osbuild/pull/1475

--- a/src/coreos.osbuild.mpp.yaml
+++ b/src/coreos.osbuild.mpp.yaml
@@ -110,6 +110,9 @@ pipelines:
                 - ref: $ref
                   remote:
                     url: $repourl
+      - type: org.osbuild.ostree.aleph
+        options:
+          coreos_compat: true
       - type: org.osbuild.ostree.selinux
         options:
           deployment:
