osbuild: set sysroot.readonly=true
We do this in create_disk today so let's set it in our
coreos.osbuild.mpp.yaml manifest too.

--- a/src/coreos.osbuild.mpp.yaml
+++ b/src/coreos.osbuild.mpp.yaml
@@ -83,7 +83,7 @@ pipelines:
           repo: /ostree/repo
           config:
             sysroot:
-              readonly: false
+              readonly: true
               bootloader: none
       - type: org.osbuild.mkdir
         options:
