draft: move container images to coreos org
Test commit, POC for https://github.com/coreos/fedora-coreos-tracker/issues/1639
This should be ammended once this repo is moved to the coreOS org

--- a/mantle/cmd/kola/resources/iscsi_butane_setup.yaml
+++ b/mantle/cmd/kola/resources/iscsi_butane_setup.yaml
@@ -19,6 +19,7 @@ storage:
             Wants=network-online.target
             OnFailure=emergency.target
             [Container]
+            #TODO: move container image to centralized namespace
             Image=quay.io/jbtrystram/targetcli:latest
             ContainerName=target
             Network=host
