tests: use container images from coreos-assembler org
Now that https://github.com/coreos/fedora-coreos-pipeline/pull/959
is merged, we have these images built by the coreOS CI and
hosted on the quay.io/coreos-assembler org.

Point tests that requires containers to use images from the
coreos-assembler org.

See  https://github.com/coreos/coreos-assembler/pull/3727
Fixes https://github.com/coreos/fedora-coreos-tracker/issues/1639

--- a/mantle/cmd/kola/resources/iscsi_butane_setup.yaml
+++ b/mantle/cmd/kola/resources/iscsi_butane_setup.yaml
@@ -19,7 +19,7 @@ storage:
             Wants=network-online.target
             OnFailure=emergency.target
             [Container]
-            Image=quay.io/jbtrystram/targetcli:latest
+            Image=quay.io/coreos-assembler/targetcli:latest
             ContainerName=targetd
             Network=host
             Volume=/dev/disk/by-id/virtio-target:/dev/disk/by-id/virtio-target
