osbuild: update the org.osbuild.bootupd stage with latest upstream
There were some updates from code review in [1]. Let's pull them
here and also update the mpp.yaml manifest to include the ostree
deployment specification.

[1] https://github.com/osbuild/osbuild/pull/1519

--- a/src/coreos.osbuild.mpp.yaml
+++ b/src/coreos.osbuild.mpp.yaml
@@ -219,6 +219,9 @@ pipelines:
           bios:
             disk: disk
           static-configs: true
+          deployment:
+            osname: fedora-coreos
+            ref: ostree/1/1/0
         devices:
           disk:
             type: org.osbuild.loopback
@@ -350,6 +353,9 @@ pipelines:
       - type: org.osbuild.bootupd
         options:
           static-configs: true
+          deployment:
+            osname: fedora-coreos
+            ref: ostree/1/1/0
         devices:
           disk:
             type: org.osbuild.loopback
