osbuild: one final update to the org.osbuild.bootupd patches
It finally merged upstream: https://github.com/osbuild/osbuild/pull/1519

--- a/src/coreos.osbuild.mpp.yaml
+++ b/src/coreos.osbuild.mpp.yaml
@@ -217,7 +217,7 @@ pipelines:
       - type: org.osbuild.bootupd
         options:
           bios:
-            disk: disk
+            device: disk
           static-configs: true
           deployment:
             osname: fedora-coreos
