osbuild: move osname to a var in fcos manifest
This makes it easier to see/change the value globally.

--- a/src/coreos.osbuild.mpp.yaml
+++ b/src/coreos.osbuild.mpp.yaml
@@ -9,6 +9,8 @@ mpp-vars:
   root_size_mb: 2048
   sector_size: 512
   four_k_sector_size: 4096
+  # The name to use for deployment stateroot
+  osname: fedora-coreos
   # Filesystem UUID and label definitions. These UUIDs
   # are looked for on boot and if found replaced with
   # a new random UUID to make each install unique.
@@ -76,7 +78,8 @@ pipelines:
       - type: org.osbuild.ostree.init-fs
       - type: org.osbuild.ostree.os-init
         options:
-          osname: fedora-coreos
+          osname:
+            mpp-format-string: '{osname}'
       - type: org.osbuild.ostree.config
         options:
           repo: /ostree/repo
@@ -94,7 +97,8 @@ pipelines:
       - type: org.osbuild.ignition
       - type: org.osbuild.ostree.deploy
         options:
-          osname: fedora-coreos
+          osname:
+            mpp-format-string: '{osname}'
           remote: fedora
           mounts:
             - /boot
@@ -115,13 +119,15 @@ pipelines:
         options:
           coreos_compat: true
           deployment:
-            osname: fedora-coreos
             ref: ostree/1/1/0
+            osname:
+              mpp-format-string: '{osname}'
       - type: org.osbuild.ostree.selinux
         options:
           deployment:
-            osname: fedora-coreos
             ref: ostree/1/1/0
+            osname:
+              mpp-format-string: '{osname}'
   - name: raw-image
     stages:
       - type: org.osbuild.truncate
@@ -225,8 +231,9 @@ pipelines:
             device: disk
           static-configs: true
           deployment:
-            osname: fedora-coreos
             ref: ostree/1/1/0
+            osname:
+              mpp-format-string: '{osname}'
         devices:
           disk:
             type: org.osbuild.loopback
@@ -363,8 +370,9 @@ pipelines:
         options:
           static-configs: true
           deployment:
-            osname: fedora-coreos
             ref: ostree/1/1/0
+            osname:
+              mpp-format-string: '{osname}'
         devices:
           disk:
             type: org.osbuild.loopback
