--- a/src/coreos.osbuild.mpp.yaml
+++ b/src/coreos.osbuild.mpp.yaml
@@ -3,6 +3,7 @@ mpp-vars:
   filename: $filename
   ociarchive: $ociarchive
   disk_size_gb: 10
+  osname: $osname
   bios_boot_size_mb: 1
   efi_system_size_mb: 127
   boot_size_mb: 384
@@ -10,8 +11,6 @@ mpp-vars:
   root_size_mb: 2048
   sector_size: 512
   four_k_sector_size: 4096
-  # The name to use for deployment stateroot
-  osname: fedora-coreos
   # Filesystem UUID and label definitions. These UUIDs
   # are looked for on boot and if found replaced with
   # a new random UUID to make each install unique.
